pkg/manifests/policy/manifests/templates/k8sreplicalimits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Requires that objects with the field `spec.replicas` (Deployments, ReplicaSets, etc.) specify a number of replicas within defined ranges.
    metadata.gatekeeper.sh/title: Replica Limits
    metadata.gatekeeper.sh/version: 1.0.2
  name: k8sreplicalimits
spec:
  crd:
    spec:
      names:
        kind: K8sReplicaLimits
      validation:
        openAPIV3Schema:
          properties:
            ranges:
              description: Allowed ranges for numbers of replicas.  Values are inclusive.
              items:
                description: A range of allowed replicas.  Values are inclusive.
                properties:
                  max_replicas:
                    description: The maximum number of replicas allowed, inclusive.
                    type: integer
                  min_replicas:
                    description: The minimum number of replicas allowed, inclusive.
                    type: integer
                type: object
              type: array
          type: object
  targets:
    - rego: |
        package k8sreplicalimits

        object_name = input.review.object.metadata.name
        object_kind = input.review.kind.kind

        violation[{"msg": msg}] {
            spec := input.review.object.spec
            not input_replica_limit(spec)
            msg := sprintf("The provided number of replicas is not allowed for %v: %v. Allowed ranges: %v", [object_kind, object_name, input.parameters])
        }

        input_replica_limit(spec) {
            provided := spec.replicas
            count(input.parameters.ranges) > 0
            range := input.parameters.ranges[_]
            value_within_range(range, provided)
        }

        value_within_range(range, value) {
            range.min_replicas <= value
            range.max_replicas >= value
        }
      target: admission.k8s.gatekeeper.sh
